--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
       <div class="scoreboard">
         <h2 class="score_info" id="scoreInfo">Choose your weapon, man.</h2>
         <h3 class="score_msg" id="scoreMsg">
-          Score 5 points and you will win!
+          Score 5 points to beat your enemy!
         </h3>
         <div class="score_container">
           <div class="score_box">
-            <!-- <img src="./images/lose.png" /> -->
+            <img class="face first" id="first_face" src="./images/main.png" />
             <p class="score" id="playerScore">Player: 0</p>
           </div>
           <div class="score_box">
-            <!-- <img src="./images/win.png" /> -->
+            <img class="face second" id="second_face" src="./images/main.png" />
             <p class="score" id="compScore">Enemy: 0</p>
           </div>
         </div>
